--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@ Limited supplies only. Reserve yours in advance now!</p>
 	<img src="s4.jpg" style="width: 240px"	height="250px">
 	<img src="s5.jpg" style="width: 240px"	height="250px">
 	<img src="s6.jpg" style="width: 250px"	height="250px">
-	
-	For more Info Just Click This Link:
+
+
+	<br><br>
+	<p>For more Info Just Click This Link:</p>
 	<a href="https://www.facebook.com/bastalechonilajerryna/" style="font-size: 160%;"><b>Jerry's Lechon Cebu</b></a>
 	
 
