--- a/index.html
+++ b/index.html
@@ -28,10 +28,19 @@ Limited supplies only. Reserve yours in advance now!</p>
 
 </main>
 
-	<img src="s3.jpg" style="width: 240px"	height="250px">
+	<img src="s3.jpg" style="width: 250px"	height="250px">
 	<img src="s4.jpg" style="width: 240px"	height="250px">
-	<img src="s5.jpg" style="width: 240px"	height="250px">
-	<img src="s6.jpg" style="width: 250px"	height="250px">
+	<img src="s5.jpg" style="width: 250px"	height="250px">
+	<img src="s6.jpg" style="width: 250px"	height="250px"><br>
+
+	<img src="s7.jpg"	style="width: 1000px"	height="350px"><br>
+
+
+	<video width="450" controls>
+		<source src="pork.mp4"	type="video/mp4">
+
+	</video>
+
 
 
 	<br><br>
