--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	
-	<img src="s2.jpg" style="width: 1020px"; height="300px">
+	<img class="main_img" src="s2.jpg" style="width: 1020px"; height="300px">
 <header>
 
 	<h1><b>Jerry's Lechon Cebu</b></h1>
